WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269446
[Site Isolation] iframe processes do not handle mouse events after opening a context menu
https://bugs.webkit.org/show_bug.cgi?id=269446
Summary
[Site Isolation] iframe processes do not handle mouse events after opening a ...
Charlie Wolfe
Reported
2024-02-15 00:51:17 PST
When the web process is waiting for the client to open a context menu, all mouse events are ignored. With site isolation, iframe processes weren't being notified when a context menu had opened. So, the processes would not handle mouse events after one context menu was opened. Instead of updating this value in each web process, we should just not send the event from the UI process when waiting for a context menu to open.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-15 00:53:42 PST
<
rdar://problem/122997776
>
Charlie Wolfe
Comment 2
2024-02-15 00:56:02 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24493
EWS
Comment 3
2024-02-15 14:59:11 PST
Committed
274771@main
(42d2cca51466): <
https://commits.webkit.org/274771@main
> Reviewed commits have been landed. Closing PR #24493 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug