[Site Isolation] iframe processes do not handle mouse events after opening a context menu https://bugs.webkit.org/show_bug.cgi?id=269446 rdar://122997776

Reviewed by Alex Christensen.

When the web process is waiting for the client to open a context menu, all mouse events are ignored. With
site isolation, iframe processes weren't being notified when a context menu had opened. So, the processes
would not handle mouse events after one context menu was opened. Instead of updating this value in each
web process, we should just not send the event from the UI process when waiting for a context menu to
open.

* LayoutTests/http/tests/site-isolation/mouse-events/context-menu-event-twice-expected.txt: Added.
* LayoutTests/http/tests/site-isolation/mouse-events/context-menu-event-twice.html: Added.
* Source/WebKit/UIProcess/WebContextMenuProxy.cpp:
(WebKit::WebContextMenuProxy::useContextMenuItems):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::processNextQueuedMouseEvent):
(WebKit::WebPageProxy::showContextMenu):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/WebProcess/WebPage/WebContextMenu.cpp:
(WebKit::WebContextMenu::show):
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::mouseEvent):
(WebKit::WebPage::didShowContextMenu): Deleted.
* Source/WebKit/WebProcess/WebPage/WebPage.h:
(WebKit::WebPage::startWaitingForContextMenuToShow): Deleted.
* Source/WebKit/WebProcess/WebPage/WebPage.messages.in:

Canonical link: https://commits.webkit.org/274771@main