Source/WebKit/UIProcess/WebContextMenuProxy.cpp
@@ -79,9 +79,7 @@ void WebContextMenuProxy::useContextMenuItems(Vector<Ref<WebContextMenuItem>>&& 
     // Protect |this| from being deallocated if WebPageProxy code is re-entered from the menu runloop or delegates.
     Ref protectedThis { *this };
     showContextMenuWithItems(WTFMove(items));
-
-    // No matter the result of showContextMenuWithItems, always notify the WebProcess that the menu is hidden so it starts handling mouse events again.
-    page->send(Messages::WebPage::DidShowContextMenu());
+    page->clearWaitingForContextMenuToShow();
 }
 
 } // namespace WebKit
