Source/WebKit/UIProcess/WebPageProxy.cpp
@@ -3469,6 +3469,13 @@ void WebPageProxy::processNextQueuedMouseEvent()
 
     const NativeWebMouseEvent& event = internals().mouseEventQueue.first();
 
+#if ENABLE(CONTEXT_MENUS)
+    if (m_waitingForContextMenuToShow) {
+        mouseEventHandlingCompleted(event.type(), false);
+        return;
+    }
+#endif
+
     if (protectedPageClient()->windowIsFrontWindowUnderMouse(event))
         setToolTip(String());
 
@@ -8586,11 +8593,13 @@ void WebPageProxy::showContextMenu(ContextMenuContextData&& contextMenuContextDa
     // If the page is controlled by automation, entering a nested run loop while the menu is open
     // can hang the page / WebDriver test. Pretend to show and immediately dismiss the context menu.
     if (RefPtr automationSession = process().processPool().automationSession()) {
-        if (m_controlledByAutomation && automationSession->isSimulatingUserInteraction()) {
-            send(Messages::WebPage::DidShowContextMenu());
+        if (m_controlledByAutomation && automationSession->isSimulatingUserInteraction())
             return;
-        }
     }
+
+#if ENABLE(CONTEXT_MENUS)
+    m_waitingForContextMenuToShow = true;
+#endif
 
     // Discard any enqueued mouse events that have been delivered to the UIProcess whilst the WebProcess is still processing the
     // MouseDown event that triggered this ShowContextMenu message. This can happen if we take too long to enter the nested runloop.
